# BHARMOS

./: .gitignore  CMakeLists.txt  README.md  kernel.h
image/: Makefile
include/bharmos/: exceptions.h  registers.h  sizes.h
kernel/: bharmos-link.ld  boot.S  init_vector_table.S  kernel.c
ref/: isa-sys.md  notes.md  pstate.md  virt-memory.md
scripts/: debug.sh
